// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pills should render a basic pill 1`] = `
<InjectIntl(Pills)
  ariaLabel="Example of a Basic Pill"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <Pills
    ariaLabel="Example of a Basic Pill"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isSingleLine={false}
  >
    <ResponsiveElement
      onResize={[Function]}
      responsiveTo="window"
    >
      <div
        aria-label="Example of a Basic Pill"
        className="pill-list"
        onBlur={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
      >
        <VisuallyHiddenText
          text="Terra.pills.pillListHint"
        >
          <span
            className="visually-hidden-text"
          >
            Terra.pills.pillListHint
          </span>
        </VisuallyHiddenText>
        <InjectIntl(Pill)
          id="basic-pill"
          isBasicPill={true}
          key=".0"
          label="Basic Pill"
          onRemove={[Function]}
        >
          <Pill
            id="basic-pill"
            intl={
              Object {
                "defaultFormats": Object {},
                "defaultLocale": "en",
                "formatDate": [Function],
                "formatHTMLMessage": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelative": [Function],
                "formatTime": [Function],
                "formats": Object {},
                "formatters": Object {
                  "getDateTimeFormat": [Function],
                  "getMessageFormat": [Function],
                  "getNumberFormat": [Function],
                  "getPluralFormat": [Function],
                  "getRelativeFormat": [Function],
                },
                "locale": "en",
                "messages": null,
                "now": [Function],
                "onError": [Function],
                "textComponent": "span",
                "timeZone": null,
              }
            }
            isBasicPill={true}
            label="Basic Pill"
            onRemove={[Function]}
          >
            <ResponsiveElement
              onResize={[Function]}
              responsiveTo="window"
            >
              <div
                className="pill-container"
                data-terra-pill={true}
                data-terra-pills-show-focus-styles={true}
                id="basic-pill"
              >
                <div
                  className="pill-label"
                  onClick={[Function]}
                  title=""
                >
                  Basic Pill
                </div>
              </div>
            </ResponsiveElement>
          </Pill>
        </InjectIntl(Pill)>
      </div>
    </ResponsiveElement>
  </Pills>
</InjectIntl(Pills)>
`;

exports[`Pills should render a basic pill with roll up 1`] = `
<InjectIntl(Pills)
  ariaLabel="Example of a basic Pill"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isSingleLine={true}
>
  <Pills
    ariaLabel="Example of a basic Pill"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isSingleLine={true}
  >
    <ResponsiveElement
      onResize={[Function]}
      responsiveTo="window"
    >
      <div
        aria-label="Example of a basic Pill"
        className="pill-list"
        onBlur={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
      >
        <VisuallyHiddenText
          text="Terra.pills.pillListHint"
        >
          <span
            className="visually-hidden-text"
          >
            Terra.pills.pillListHint
          </span>
        </VisuallyHiddenText>
        <InjectIntl(RollUpPill)
          isSingleLine={true}
          onSelectRollUp={[Function]}
          rollupCount={1}
        >
          <RollUpPill
            intl={
              Object {
                "defaultFormats": Object {},
                "defaultLocale": "en",
                "formatDate": [Function],
                "formatHTMLMessage": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelative": [Function],
                "formatTime": [Function],
                "formats": Object {},
                "formatters": Object {
                  "getDateTimeFormat": [Function],
                  "getMessageFormat": [Function],
                  "getNumberFormat": [Function],
                  "getPluralFormat": [Function],
                  "getRelativeFormat": [Function],
                },
                "locale": "en",
                "messages": null,
                "now": [Function],
                "onError": [Function],
                "textComponent": "span",
                "timeZone": null,
              }
            }
            isSingleLine={true}
            onSelectRollUp={[Function]}
            rollupCount={1}
          >
            <div
              className="roll-up-pill"
              data-terra-rollup-pill={true}
              data-terra-rollup-pill-show-focus-styles={true}
              id="rollup-pill"
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="button"
              tabIndex="0"
            >
              Terra.pills.rollupPillLabel
            </div>
          </RollUpPill>
        </InjectIntl(RollUpPill)>
      </div>
    </ResponsiveElement>
  </Pills>
</InjectIntl(Pills)>
`;
